--- a/Svg2Xaml/Svg2Xaml.csproj
+++ b/Svg2Xaml/Svg2Xaml.csproj
@@ -144,6 +144,7 @@
     <Compile Include="SvgTransform.cs" />
     <Compile Include="SvgUrl.cs" />
     <Compile Include="SvgUseElement.cs" />
+    <Compile Include="SvgViewbox.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="COPYING">
